--- a/css/styles.css
+++ b/css/styles.css
@@ -93,8 +93,30 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.cartao1{
+  background-color: rgba(0, 0, 0, 0.781); 
+  border-radius: 10px; 
+  padding: 35px 35px; 
+}
+
+.cartao2{
+  background-color: rgba(0, 0, 0, 0.781); 
+  border-radius: 10px; 
+  padding: 35px 35px;
+  width: 75%; 
+  margin-left: 14%;
+}
+
+.cartoes{
+  margin-left: 34%;
+}
+
 nav{
   background-color: blacks;
+}
+
+.bemv{
+  text-align: justify;
 }
 
 input{
@@ -149,6 +171,8 @@ h1, .h1 {
 
 h2, .h2 {
   font-size: calc(1.325rem + 0.9vw);
+  font-family: Arial, Helvetica, sans-serif;
+  color: azure;
 }
 @media (min-width: 1200px) {
   h2, .h2 {
@@ -10947,7 +10971,7 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to right, rgba(0, 0, 255, 0.3), rgba(0, 0, 255, 0.1)), url("../assets/img/wallpaper.jpg");
+  background: linear-gradient(to bottom, rgba(255, 0, 0, 0.3), rgba(255, 0, 0, 0.1)), url("../assets/img/wallpaper.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
